# watershot

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: release.yml
src/: main.rs  rendering.rs  runtime_data.rs  types.rs
src/sctk_impls/: compositor_handler.rs  keyboard_handler.rs  layer_shell_handler.rs  output_handler.rs  pointer_handler.rs  seat_handler.rs
