[package]
name = "watershot"
authors = ["Kirottu"]
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "25"
wgpu_text = "0"

rustix = { version = "1", features = ["runtime"] }
wayland-client = { version = "0" }
wayland-backend = { version = "0", features = ["client_system"] }
smithay-client-toolkit = "0"
wl-clipboard-rs = { version = "0" }

image = { version = "0", default-features = false, features = ["pnm", "jpeg", "png", "webp", "avif"] }
ron = "0"
serde = { version = "1", features = ["derive"] }
fontconfig = "0"
clap = { version = "4", features = ["derive"] }
chrono = "0"
env_logger = { version = "0", default-features = false, features = ["auto-color"] }
log = "0"
pollster = "0"
bytemuck = { version = "1", features = ["derive"] }
regex = "1"
# hyprland = "0.4.0-alpha.2"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }
strum = { version = "0", features = ["derive", "strum_macros"] }

libwayshot = { git = "https://github.com/waycrate/wayshot" }
