[package]
name = "watershot"
authors = ["Kirottu"]
version = "0.2.3-libwayshot"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "=25.0.2"
wgpu_text = "=0.9.3"

rustix = { version = "=1.0.7", features = ["runtime"] }
wayland-client = { version = "=0.31.10" }
wayland-backend = { version = "=0.3.10", features = ["client_system"] }
smithay-client-toolkit = "=0.19.2"
wl-clipboard-rs = { version = "=0.9.0" }

image = { version = "=0.24.9", default-features = false, features = ["pnm", "jpeg", "png", "webp"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
fontconfig = "=0.10.0"
clap = { version = "=4.5.40", features = ["derive"] }
chrono = "=0.4.41"
env_logger = { version = "=0.11.8", default-features = false, features = ["auto-color"] }
log = "=0.4.27"
pollster = "=0.4.0"
bytemuck = { version = "=1.23.1", features = ["derive"] }
regex = "=1.11.1"
hyprland = "0.4.0-alpha.3"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }

libwayshot = "=0.3.0"
